// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: anonymous users 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <withAppStateContext(GlobalNavBranding) />
  <withAppStateContext(GlobalNavMenu)
    currentUser={
      Object {
        "dismissedNotices": Object {},
        "isLoggedIn": false,
      }
    }
    location={
      Object {
        "pathname": "",
      }
    }
  />
  <ul
    className="global-navbar-menu global-navbar-menu-right"
  >
    <EmbedDocsPopupHelper />
    <withRouter(Search) />
    <withRouter(GlobalNavUser)
      currentUser={
        Object {
          "dismissedNotices": Object {},
          "isLoggedIn": false,
        }
      }
    />
  </ul>
</NavBar>
`;

exports[`should render correctly: logged in users 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <withAppStateContext(GlobalNavBranding) />
  <withAppStateContext(GlobalNavMenu)
    currentUser={
      Object {
        "isLoggedIn": true,
      }
    }
    location={
      Object {
        "pathname": "",
      }
    }
  />
  <ul
    className="global-navbar-menu global-navbar-menu-right"
  >
    <EmbedDocsPopupHelper />
    <withRouter(Search) />
    <withRouter(GlobalNavUser)
      currentUser={
        Object {
          "isLoggedIn": true,
        }
      }
    />
  </ul>
</NavBar>
`;
